treesitter/grammar.js
    source_file: ($) => seq(repeat($.import_declaration), repeat($._declaration)),

    _declaration: ($) =>
      choice($.function_declaration, $.extern_function_declaration, $.export_declaration, $.struct_declaration, $.shape_declaration, $.union_declaration, $.enum_declaration, $.let_binding, $.compile_if_declaration, $.macro_invocation),

    // A top-level macro call like `mod.macro(args)`. A dedicated rule (rather than
    // reusing call_expression) keeps declarations out of the callee position.
    compile_if_declaration: ($) =>
      seq(
        "#", token.immediate("if"),
        field("condition", $._compile_condition),
        repeat(choice($.import_declaration, $._declaration)),
        "#", token.immediate("end"),
      ),

    compile_if_expression: ($) =>
      seq(
        "#", token.immediate("if"),
        field("condition", $._compile_condition),
        repeat($._expression),
        "#", token.immediate("end"),
      ),

    _compile_condition: ($) =>
      choice(
        $.compile_condition_flag,
        $.compile_condition_not,
        $.compile_condition_and,
        $.compile_condition_or,
      ),

    compile_condition_flag: ($) =>
      seq(field("category", $.identifier), ".", field("key", $.identifier)),

    compile_condition_not: ($) =>
      seq("not", field("operand", $._compile_condition)),

    compile_condition_and: ($) =>
      prec.left(PREC.AND, seq(
        field("left", $._compile_condition),
        "and",
        field("right", $._compile_condition),
      )),

    compile_condition_or: ($) =>
      prec.left(PREC.OR, seq(
        field("left", $._compile_condition),
        "or",
        field("right", $._compile_condition),
      )),

    // >>> Imports

    import_declaration: ($) =>
      seq(
        "use",
        optional(seq(field("alias", $.identifier), "=")),
        field("path", $.import_path),
      ),

    import_path: ($) =>
      seq($.identifier, repeat(seq(".", $.identifier))),

    // >>> Comments
    // Line comments: `-- ...`
    // Block comments: `--- ... ---`
    // The line comment regex requires a non-dash char after `--` to avoid
    // consuming `---` which starts a block comment.

    line_comment: (_) => token(seq("--", /[^-]/, /[^\n]*/)),

    block_comment: (_) =>
      token(seq("---", repeat(choice(/[^-]/, /-[^-]/, /--[^-]/)), "---")),

    // >>> Identifiers

    // A leading underscore covers the `_` discard target and compiler builtins
    // like `__errno`.
    identifier: (_) => /[a-z_][a-zA-Z0-9_]*/,

    type_identifier: (_) => /[A-Z][a-zA-Z0-9_]*/,

    allocator_identifier: (_) => /@[a-z][a-zA-Z0-9_]*/,

    // >>> Literals

    integer_literal: (_) =>
      token(choice(
        seq("0x", /[0-9a-fA-F]+(_[0-9a-fA-F]+)*/),
        seq("0o", /[0-7]+(_[0-7]+)*/),
        seq("0b", /[01]+(_[01]+)*/),
        /[0-9]+(_[0-9]+)*/,
      )),

    bytes_literal: (_) => seq('b"', /([^"\\]|\\.)*/, '"'),

    _type: ($) =>
      choice(
        $.simple_type,
        $.array_type,
        $.slice_type,
        $.reference_type,
        $.optional_type,
        $.result_type,
        $.function_type,
      ),

    // `?T` is `Option<T>`; `!T` is `Result<T>`.
    simple_type: ($) => choice(
      seq(
        optional(seq($.identifier, ".")),
        $.type_identifier,
        repeat(seq(".", $.type_identifier)),
        optional($.type_arguments),
      ),
      "void",
      "never",
    ),

    array_type: ($) => seq("[", $.integer_literal, "]", $._type),

    slice_type: ($) => seq("[", "]", optional("mut"), $._type),

    function_declaration: ($) =>
      seq(
        optional("pub"),
        optional("unsync"),
        optional("unsafe"),
        "fun",
        field("name", $.function_name),
        optional(field("type_parameters", $.type_parameters)),
        "(", field("parameters", optional($.parameter_list)), ")",
        optional("noescape"),
        field("return_type", $._type),
        field("body", $.block),
      ),

    function_name: ($) =>
      choice(
        $.identifier,
        seq($.type_identifier, ".", $.identifier),
      ),

    // The comma between parameters is optional (`a Int, b Str` or `a Int b Str`).
    parameter_list: ($) => seq($.parameter, repeat(seq(optional(","), $.parameter)), optional(",")),

    parameter: ($) =>
      seq(
        field("name", choice($.identifier, $.allocator_identifier)),
        optional(choice("sync", "noescape")),
        field("type", $._type),
        optional(seq("=", field("default", $._expression))),
      ),

    // >>> Struct declaration

    struct_declaration: ($) =>
      seq(
        optional("pub"),
        optional("nocopy"),
        optional(choice("sync", "unsync")),
        "struct",
        field("name", $.type_identifier),
        optional(field("type_parameters", $.type_parameters)),
        "{", repeat($.struct_field), "}",
      ),

    struct_field: ($) =>
      seq(
        optional("pub"),
        field("name", choice($.identifier, $.allocator_identifier)),
        field("type", $._type),
      ),

    // >>> Shape declaration

    block: ($) => seq("{", repeat($._expression), "}"),

    // >>> Expressions

    _expression: ($) =>
      choice(
        // Literals and atoms.
        $.integer_literal,
        $.string_literal,
        $.bytes_literal,
        $.rune_literal,
        $.boolean_literal,
        $.void,
        $.identifier,
        $.allocator_identifier,
        $.grouped_expression,
        $.array_literal,
        $.empty_slice,
        $.block,

        // Declarations (can appear inside blocks).
        $.function_declaration,
        $.struct_declaration,
        $.shape_declaration,
        $.union_declaration,
        $.enum_declaration,

        // Type-prefixed expressions.
        $.qualified_name,
        $.type_construction,

        // Bindings and assignment.
        $.let_binding,
        $.mut_binding,
        $.allocator_binding,
        $.assignment,

        // Operators.
        $.binary_expression,
        $.unary_expression,

        // Postfix.
        $.call_expression,
        $.field_access,
        $.index_expression,
        $.sub_slice,
        $.reference,
        $.dereference,

        // Function literal / closure.
        $.function_literal,

        // Conditional compilation.
        $.compile_if_expression,

        // Control flow.
        $.if_expression,
        $.when_expression,
        $.for_expression,
        $.match_expression,
        $.try_expression,
        $.return_expression,
        $.break_expression,
        $.continue_expression,
      ),

    // >>> Type-prefixed expressions

    // TypeName.methodName or TypeName.methodName<Args>
    type_construction: ($) =>
      prec(PREC.POSTFIX, seq(
        field("type", $.type_identifier),
        optional(field("type_arguments", $.type_arguments)),
        "(", field("arguments", optional($.argument_list)), ")",
      )),

    // >>> Bindings

    let_binding: ($) =>
      prec.right(PREC.ASSIGN,
        seq(optional("pub"), "let", field("name", $.identifier), optional(field("type", $._type)), "=", field("value", $._expression))),

    mut_binding: ($) =>
      prec.right(PREC.ASSIGN,
        seq("mut", field("name", $.identifier), optional(field("type", $._type)), "=", field("value", $._expression))),

    allocator_binding: ($) =>
      prec.right(PREC.ASSIGN, seq(
        "let",
        field("name", $.allocator_identifier),
        "=",
        field("type", $.type_identifier),
        "(", field("arguments", optional($.argument_list)), ")",
      )),

    // >>> Assignment

    assignment: ($) =>
      prec.right(PREC.ASSIGN, seq(
        field("target", $._assignable),
        "=",
        field("value", $._expression),
      )),

    _assignable: ($) =>
      choice($.identifier, $.field_access, $.index_expression, $.dereference),

    // >>> Binary expressions

    argument_list: ($) =>
      seq($._expression, repeat(seq(",", $._expression)), optional(",")),

    field_access: ($) =>
      prec.left(PREC.POSTFIX, seq(
        field("object", $._expression),
        ".",
        field("field", choice($.identifier, $.type_identifier, $.allocator_identifier)),
      )),

    index_expression: ($) =>
      prec(PREC.POSTFIX, seq(
        field("object", $._expression),
        "[", field("index", $._expression), "]",
      )),

    // `a[lo..hi]`, `a[lo..]`, `a[..hi]`, `a[..]`, `a[lo..=hi]`. Bounds optional.
    dereference: ($) =>
      prec.left(PREC.POSTFIX, seq($._expression, ".", "*")),

    // >>> Control flow

    array_literal: ($) => seq(
      "[",
      $._expression, repeat(seq(",", $._expression)), optional(","),
      "]",
    ),
