treesitter/test/corpus/array_construction.txt
================================================================================
Array fill construction
================================================================================

fun f() void { let x = [4 of U8(7)] }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (let_binding
        name: (identifier)
        value: (array_construction
          length: (integer_literal)
          value: (type_construction
            type: (type_identifier)
            arguments: (argument_list
              (integer_literal))))))))

================================================================================
Array uninitialized construction
================================================================================

fun f() void { let x = unsafe [3 uninit Int] }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (let_binding
        name: (identifier)
        value: (unsafe_expression
          (array_construction
            length: (integer_literal)
            element: (simple_type
              (type_identifier))))))))

================================================================================
of and uninit are identifiers outside array construction
================================================================================

fun f() void { let of = 1  let uninit = 2 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (let_binding
        name: (identifier)
        value: (integer_literal))
      (let_binding
        name: (identifier)
        value: (integer_literal)))))
