treesitter/test/corpus/bindings.txt
================================================================================
Module-level let bindings
================================================================================

struct Foo { x Int }
let a = 42
let b = Foo(1)
let c = [1, 2, 3]
fun main() void {}

--------------------------------------------------------------------------------

(source_file
  (struct_declaration
    name: (type_identifier)
    (struct_field
      name: (identifier)
      type: (simple_type
        (type_identifier))))
  (let_binding
    name: (identifier)
    value: (integer_literal))
  (let_binding
    name: (identifier)
    value: (type_construction
      type: (type_identifier)
      arguments: (argument_list
        (integer_literal))))
  (let_binding
    name: (identifier)
    value: (array_literal
      (integer_literal)
      (integer_literal)
      (integer_literal)))
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block)))

================================================================================
Let and mut bindings
================================================================================

fun f() void { let x = 1  mut y = 2 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (let_binding
        name: (identifier)
        value: (integer_literal))
      (mut_binding
        name: (identifier)
        value: (integer_literal)))))

================================================================================
Allocator binding
================================================================================

fun f() void { let @a = Arena() let @b = h.@a }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (allocator_binding
        name: (allocator_identifier)
        value: (type_construction
          type: (type_identifier)))
      (allocator_binding
        name: (allocator_identifier)
        value: (field_access
          object: (identifier)
          field: (allocator_identifier))))))

================================================================================
Assignment to variable, field, index, deref
================================================================================

fun f() void { x = 1  x.y = 2  x[0] = 3  x.* = 4 }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (assignment
        target: (identifier)
        value: (integer_literal))
      (assignment
        target: (field_access
          object: (identifier)
          field: (identifier))
        value: (integer_literal))
      (assignment
        target: (index_expression
          object: (identifier)
          index: (integer_literal))
        value: (integer_literal))
      (assignment
        target: (dereference
          (identifier))
        value: (integer_literal)))))

================================================================================
Integer literal bases
================================================================================

let a = 0xFF
let b = 0o755
let c = 0b1010_1010
let d = 1_000_000

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (integer_literal))
  (let_binding
    name: (identifier)
    value: (integer_literal))
  (let_binding
    name: (identifier)
    value: (integer_literal))
  (let_binding
    name: (identifier)
    value: (integer_literal)))

================================================================================
Bytes literal
================================================================================

let a = b"abc"
let b = b""
let c = b"\xFF\n"

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    value: (bytes_literal))
  (let_binding
    name: (identifier)
    value: (bytes_literal))
  (let_binding
    name: (identifier)
    value: (bytes_literal)))
================================================================================
Let binding with type annotation
================================================================================

fun f() void { let x AppErr = none }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (function_name
      (identifier))
    return_type: (simple_type)
    body: (block
      (let_binding
        name: (identifier)
        type: (simple_type
          (type_identifier))
        value: (identifier)))))


================================================================================
Public let binding with type
================================================================================

pub let dt_unknown U8 = 0

--------------------------------------------------------------------------------

(source_file
  (let_binding
    name: (identifier)
    type: (simple_type
      (type_identifier))
    value: (integer_literal)))
